--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,38 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>XX Watts</title>
+
+    <meta name="description" content="${content}"/>
+    <meta name="keywords" content="XX Watts, ${comma separated services-titles}"/>
+    <meta name="robots" content="index/follow"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg"/>
+
+    <meta itemprop="name" content="${content}"/>
+    <meta itemprop="description" content="${content}"/>
+    <meta itemprop="image" content="${%PUBLIC_URL%/og.jpg}"/>
+
+    <meta property="og:title" content="${content}"/>
+    <meta property="og:image" content="${%PUBLIC_URL%/og.jpg}"/>
+    <meta property="og:description" content="${content}"/>
+
+    <meta name="theme-color" content="#fff"/>
+    <meta name="msapplication-navbutton-color" content="#fff"/>
+
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA==" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ==" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +49,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
